--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-color: #FAFAFA;
+
+    @media only screen and (max-width: 425px) {
+        background-color: #fff;
+    }
+}
